--- a/자바스크립트_라이브러리/Day04/second_main_page.css
+++ b/자바스크립트_라이브러리/Day04/second_main_page.css
@@ -20,6 +20,15 @@
   justify-content: center;
   align-items: center;
 }
+.icecream {
+  transition: all 0.5s;
+}
+.icecream:hover {
+  transform: translateY(-40px);
+}
+.icecream:hover > .icecream_text {
+  background-color: #e53328;
+}
 
 .icecream_text {
   border-radius: 40px;
@@ -29,16 +38,24 @@
   padding: 15px 5px;
 }
 
-.icecream_text:hover {
-  background-color: #e53328;
-}
-
 .icecream_text > span {
   text-align: center;
   display: flex;
   justify-content: center;
   font-size: 20px;
   font-weight: 700;
+}
+
+.milk {
+  transition: all 0.5s;
+}
+
+.milk:hover {
+  transform: translateY(-40px);
+}
+
+.milk:hover > .milk_text {
+  background-color: #e53328;
 }
 
 .milk_text {
@@ -61,6 +78,18 @@
   font-weight: 700;
 }
 
+.fermentation {
+  transition: all 0.5s;
+}
+
+.fermentation:hover {
+  transform: translateY(-40px);
+}
+
+.fermentation:hover > .fermentation_text {
+  background-color: #e53328;
+}
+
 .fermentation_text {
   border-radius: 40px;
   border-color: #f9f9f9;
@@ -79,6 +108,18 @@
   justify-content: center;
   font-size: 20px;
   font-weight: 700;
+}
+
+.coffee {
+  transition: all 0.5s;
+}
+
+.coffee:hover {
+  transform: translateY(-40px);
+}
+
+.coffee:hover > .coffee_text {
+  background-color: #e53328;
 }
 
 .coffee_text {
@@ -101,6 +142,18 @@
   font-weight: 700;
 }
 
+.juice {
+  transition: all 0.5s;
+}
+
+.juice:hover {
+  transform: translateY(-40px);
+}
+
+.juice:hover > .juice_text {
+  background-color: #e53328;
+}
+
 .juice_text {
   border-radius: 40px;
   border-color: #f9f9f9;
@@ -119,6 +172,18 @@
   justify-content: center;
   font-size: 20px;
   font-weight: 700;
+}
+
+.drink {
+  transition: all 0.5s;
+}
+
+.drink:hover {
+  transform: translateY(-40px);
+}
+
+.drink:hover > .drink_text {
+  background-color: #e53328;
 }
 
 .drink_text {
